# mastermind

./: README.md  code.py  mastermind.py  pyproject.toml  requirements.txt
api/: numbers.py
modules/: checkGuess.py  logic.py  menu.py
