[tool.poetry]
name = "reach_challenge"
version = "0.1.0"
description = ""
authors = ["rlivermorejr <rlivermorejr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pyfiglet = "^0.8.post1"
simple-term-menu = "^1.4.1"
pyproject-toml = "^0.0.11"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
